Issue #1015: Department icons not centered

--- a/docroot/themes/custom/bos_theme/css/bos_theme_overrides.css
+++ b/docroot/themes/custom/bos_theme/css/bos_theme_overrides.css
@@ -782,12 +782,11 @@ What: Fixes the department icon to be 100px square. (Iterators issue #39)
 */
 @media screen and  (min-width: 980px) {
   .node-type-department-profile .department-icon {
-    padding: 13px 0 0 13px;
+    padding: 13px 0 0 18px;
   }
 }
 .node-department-profile .department-icon svg {
-  height: 76px;
-  width: 76px;
+  width: 90%;
 }
 @media screen and (min-width: 980px) and (max-width: 1300px) {
   .node-type-department-profile .department-icon {
